<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.MapsActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/checkbox_photos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_gravity="center"
            android:buttonTint="@color/red"
            android:text="@string/photos_not_upper"
            android:textColor="@color/red"/>

        <CheckBox
            android:id="@+id/checkbox_notes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_gravity="center"
            android:buttonTint="@color/azur"
            android:text="@string/notes_not_upper"
            android:textColor="@color/azur"/>

        <CheckBox
            android:id="@+id/checkbox_videos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_gravity="center"
            android:buttonTint="@color/green"
            android:text="@string/videos_not_upper"
            android:textColor="@color/green"/>

        <Button
            android:id="@+id/buttonValider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_margin="@dimen/maps_margin_button"
            android:background="@color/colorPrimary"
            android:onClick="showSelectedNotes"
            android:text="@string/valid"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/create_text_size_button"/>
    </LinearLayout>



    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:map="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activities.MapsActivity" />


</LinearLayout>