<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.PhotosList.ModificationPhotoInformationsActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight = "0"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight = "1"
            android:layout_margin="@dimen/margin_create_modif_note_champs">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/TitrePhoto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:maxLength="32"
                android:maxLines="1"
                android:inputType="text"
                android:hint="@string/name_of_my_photo"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/buttonValider"
            android:padding="@dimen/margin_create_modif_note_champs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:layout_margin="@dimen/margin_create_modif_note_champs"
            android:background="@color/colorPrimary"
            android:onClick="modifierNote"
            android:text="@string/valid"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/create_text_size_button"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight = "0"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/LieuPhoto"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_create_modif_note_champs"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:textSize="@dimen/size_info_details_photo_video"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight = "1"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:layout_margin="@dimen/margin_create_modif_note_champs">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/DatePhoto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="date"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:nextFocusDown="@id/TagsPhoto"
                android:hint="@string/date"/>
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/DetailPhoto"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_margin="@dimen/margin_create_modif_note_champs"/>

    <android.support.design.widget.TextInputLayout
        android:layout_weight = "0"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="@dimen/margin_create_modif_note_champs">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/TagsPhoto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"
            android:hint="@string/tags"/>
    </android.support.design.widget.TextInputLayout>
</LinearLayout>