<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.ModificationsTripActivity">

    <TextView
        android:id="@+id/nomVoyage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight = "0"
        android:textStyle="bold"
        android:textSize="@dimen/modif_nom_voyage_size"
        android:layout_margin="@dimen/margin_create_modif_note_champs"
        android:text="%1$s"
        android:textColor="#FF000000"
        android:textAlignment="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:id="@+id/Infos"
            android:onClick="showInfo"
            android:background="@color/colorPrimary"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/modif_layout_margin_button_Top_Bottom"
            android:layout_marginBottom="@dimen/modif_layout_margin_button_Top_Bottom"
            android:layout_marginLeft="@dimen/modif_layout_margin_button_Left_Right"
            android:layout_marginRight="@dimen/modif_layout_margin_button_Left_Right">

            <ImageView
                android:id="@+id/imageInfos"
                android:layout_width="@dimen/modif_size_icons"
                android:layout_height="@dimen/modif_size_icons"
                android:layout_weight="0"
                android:layout_gravity="center"
                android:layout_margin="@dimen/modif_layout_margin_icons"
                android:src="@drawable/informations_icon"/>

            <TextView
                android:id="@+id/textInfos"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/data"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/modif_text_size_button" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:id="@+id/Photos"
            android:onClick="showPhotos"
            android:background="@color/colorPrimary"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/modif_layout_margin_button_Top_Bottom"
            android:layout_marginBottom="@dimen/modif_layout_margin_button_Top_Bottom"
            android:layout_marginLeft="@dimen/modif_layout_margin_button_Left_Right"
            android:layout_marginRight="@dimen/modif_layout_margin_button_Left_Right">

            <ImageView
                android:id="@+id/imagePhotos"
                android:layout_width="@dimen/modif_size_icons"
                android:layout_height="@dimen/modif_size_icons"
                android:layout_weight="0"
                android:layout_gravity="center"
                android:layout_margin="@dimen/modif_layout_margin_icons"
                android:src="@drawable/photos_icon"/>

            <TextView
                android:id="@+id/textPhotos"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/pics"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/modif_text_size_button" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:id="@+id/Notes"
            android:onClick="showNotes"
            android:background="@color/colorPrimary"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/modif_layout_margin_button_Top_Bottom"
            android:layout_marginBottom="@dimen/modif_layout_margin_button_Top_Bottom"
            android:layout_marginLeft="@dimen/modif_layout_margin_button_Left_Right"
            android:layout_marginRight="@dimen/modif_layout_margin_button_Left_Right">

            <ImageView
                android:id="@+id/imageNotes"
                android:layout_width="@dimen/modif_size_icons"
                android:layout_height="@dimen/modif_size_icons"
                android:layout_weight="0"
                android:layout_gravity="center"
                android:layout_margin="@dimen/modif_layout_margin_icons"
                android:src="@drawable/notes_icon"/>

            <TextView
                android:id="@+id/textNotes"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/notes"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/modif_text_size_button" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:id="@+id/Videos"
            android:onClick="showVideos"
            android:background="@color/colorPrimary"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/modif_layout_margin_button_Top_Bottom"
            android:layout_marginBottom="@dimen/modif_layout_margin_button_Top_Bottom"
            android:layout_marginLeft="@dimen/modif_layout_margin_button_Left_Right"
            android:layout_marginRight="@dimen/modif_layout_margin_button_Left_Right">

            <ImageView
                android:id="@+id/imageVideos"
                android:layout_width="@dimen/modif_size_icons"
                android:layout_height="@dimen/modif_size_icons"
                android:layout_weight="0"
                android:layout_gravity="center"
                android:layout_margin="@dimen/modif_layout_margin_icons"
                android:src="@drawable/videos_icon"/>

            <TextView
                android:id="@+id/textVideos"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/videos"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/modif_text_size_button" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:id="@+id/Carte"
            android:onClick="showMap"
            android:background="@color/colorPrimary"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/modif_layout_margin_button_Top_Bottom"
            android:layout_marginBottom="@dimen/modif_layout_margin_button_Top_Bottom"
            android:layout_marginLeft="@dimen/modif_layout_margin_button_Left_Right"
            android:layout_marginRight="@dimen/modif_layout_margin_button_Left_Right">

            <ImageView
                android:id="@+id/imageCarte"
                android:layout_width="@dimen/modif_size_icons"
                android:layout_height="@dimen/modif_size_icons"
                android:layout_weight="0"
                android:layout_gravity="center"
                android:layout_margin="@dimen/modif_layout_margin_icons"
                android:src="@drawable/carte_icon"/>

            <TextView
                android:id="@+id/textCarte"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/map"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/modif_text_size_button" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>